# vit-colmap

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUGMENTATION_USAGE.md  METRICS_QUICKSTART.md  README.md  pyproject.toml
data/: README.md
docs/: AUGMENTATION_USAGE.md  METRICS_QUICKSTART.md  ORIENTATION_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  SIMPLIFIED_ORIENTATION.md
experiments/: IMPLEMENTATION_SUMMARY.md  MULTI_SCENE_README.md  PIXEL_VISUALIZATION_README.md  exp_layer_invariance.py  exp_multi_scene_analysis.py  exp_view_layers.py  invariance_utils.py  run_layer_exp.sh  run_layer_multi_scans.sh  test_multi_scene.sh  test_pixel_visualization.sh
scripts/: README_beit_simplified.md  README_visualize_hpatches.md  README_visualize_matches.md  aggregate_results.py  build_pycolmap.sh  compare_metrics.py  plot_training_losses.py  resume_training.sh  run_DTU_beit.sh  run_DTU_colmap.sh  run_DTU_sift.sh  run_DTU_trainable_vit.sh  run_DTU_vit.sh  run_HPatches_sift.sh  run_HPatches_trainable_vit.sh  run_training.sh  run_visualize_invariant_points.sh  run_visualize_matches.sh  test_beit_simplified.py  train_vit_features.py  visualize_hpatches_warping.py  visualize_invariant_points.py  visualize_matches.py  visualize_training_sampling.py
tests/: quick_visualization.py  test_smoke_e2e.py  test_vit_integration.py  visualize_features.py
vit_colmap/: __init__.py
vit_colmap/database/: __init__.py  colmap_db.py
vit_colmap/dataloader/: __init__.py  homography_utils.py  hpatches_dataset.py  synthetic_homography.py  training_batch.py  training_sampler.py
(+23 files in other folders)
